remove horizontal scrollbar issue

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,6 +3,10 @@
 @import 'variables';
 @import 'mixins';
 
+body {
+  overflow-x: hidden;
+}
+
 * {
   font-family: $font-text;
   margin: 0;
